Re-enable preview since we are using text blocks